# blindsight

./: .gitignore  AGENTS.md  LICENSE  README.md  blindsight.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: README.md  ground_truth.json  make_test_sheet.py  run_benchmark.py  score.py  scorecard.csv  test_sheet.md  token_savings.py
blindsight/: __init__.py  __main__.py  cli.py  colornames.py  context.py  descriptor.py  extractor.py  formatter.py  geometry.py  layout.py  relations.py
blindsight/modules/: __init__.py  codes.py  colors.py  exif.py  faces.py  layout.py  ocr.py  regions.py  shapes.py  stats.py  structure.py
docs/: audit-prompt.md
examples/: SHOWCASE.md  make_synthetic_samples.py  questions.json  regenerate.py
examples/results/: app_ui.descriptor.txt  app_ui.packet.txt  bar_chart.descriptor.txt  bar_chart.packet.txt  barcode.descriptor.txt  barcode.packet.txt  blindsight_logo.descriptor.txt  blindsight_logo.packet.txt  landscape.descriptor.txt  landscape.packet.txt  logo.descriptor.txt  logo.packet.txt  photo_square.descriptor.txt  photo_square.packet.txt  portrait_face.descriptor.txt  portrait_face.packet.txt  qr_code.descriptor.txt  qr_code.packet.txt  receipt.descriptor.txt  receipt.packet.txt  street_scene.descriptor.txt  street_scene.packet.txt
tests/: test_colors_accent.py  test_example_fixtures.py  test_extractor.py  test_layout.py  test_layout_graph.py  test_ocr_layout.py  test_random_property.py  test_regions.py  test_relations.py
